fix overlap of form style

--- a/jsapp/scss/components/_kobo.bem.ui.scss
+++ b/jsapp/scss/components/_kobo.bem.ui.scss
@@ -36,6 +36,15 @@
       height:calc(100% - 110px);
       overflow:auto;
     }
+
+    &.asset-view__content--formStyleDisplayed {
+      > .asset-view__row--header {
+        height:280px;
+      }
+      .asset-view__row--form {
+        height:calc(100% - 280px);
+      }      
+    }
   }
 }
 
